<resources>
    <string name="app_name">发电机</string>
    <string name="generator_name">名称</string>
    <string name="generator_state">状态</string>
    <string name="generator_power">功率</string>
    <string name="generator_temperature_difference">温差</string>
    <string name="generator_rev">转速</string>
    <string name="rotation_per_minute">rpm</string>
    <string name="exit">退出</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manual_discover">手动搜索</string>
    <string name="temp_test">临时测试</string>
    <string name="power">功率</string>
    <string name="temperatureDifference">温度差</string>
    <string name="rev">转速</string>
    <string name="simulation_data">模拟数据</string>
    <string name="debug_mode">调试模式</string>
    <string name="about">关于</string>
    <string name="generator_operate">发电机操作</string>
    <string name="database_clear">清空</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="debug">调试</string>
    <string name="stop_discover">停止搜索</string>
    <string name="bluetooth_operate">蓝牙操作</string>
</resources>